--- a/Shop.Web/package.json
+++ b/Shop.Web/package.json
@@ -7,6 +7,10 @@
     "name": ""
   },
   "dependencies": {
+    "@grpc/proto-loader": "^0.3.0",
+    "google-protobuf": "^3.6.1",
+    "grpc": "^1.15.0",
+    "grpc-web": "^1.0.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "react": "^16.13.0",
