--- a/Shop.Web/package.json
+++ b/Shop.Web/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "@grpc/proto-loader": "^0.3.0",
+    "express": "^4.17.1",
     "google-protobuf": "^3.6.1",
     "grpc": "^1.15.0",
-    "grpc-web": "^1.0.0",
-    "express": "^4.17.1",
+    "grpc-web": "^1.0.7",
     "path": "^0.12.7",
+    "protoc": "^1.0.4",
+    "protoc-gen-grpc-web": "^1.0.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "ts-loader": "^6.2.1",
