--- a/Shop.Web/package.json
+++ b/Shop.Web/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "shop.web",
-  "version": "0.0.0",
-  "description": "Shop.Web",
-  "main": "server.js",
-  "author": {
-    "name": ""
+  "name": "Shop.Web",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/webpack",
+    "start": "npm run build && node server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@grpc/proto-loader": "^0.3.0",
+    "browserify": "^16.5.0",
     "express": "^4.17.1",
-    "google-protobuf": "^3.6.1",
-    "grpc": "^1.15.0",
+    "google-protobuf": "^3.11.4",
     "grpc-web": "^1.0.7",
-    "path": "^0.12.7",
-    "protoc": "^1.0.4",
-    "protoc-gen-grpc-web": "^1.0.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "typescript": "^3.8.3"
   },
-  "scripts": {
-    "build": "webpack-cli app.tsx --config webpack-config.js"
+  "devDependencies": {
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "html-webpack-plugin": "^3.2.0",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
