--- a/Shop.Web/tsconfig.JSON
+++ b/Shop.Web/tsconfig.JSON
@@ -1,18 +1,16 @@
 {
   "compilerOptions": {
-    "noImplicitAny": false,
-    "module": "commonjs",
-    "noEmitOnError": true,
-    "removeComments": false,
-    "sourceMap": true,
-    "target": "es5",
+    "allowSyntheticDefaultImports": true,
     "jsx": "react",
-    "allowSyntheticDefaultImports": true
+    "module": "commonjs",
+    "noImplicitAny": true,
+    "outDir": "./build/",
+    "preserveConstEnums": true,
+    "removeComments": true,
+    "sourceMap": true,
+    "target": "es5"
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "files": [
-    "app.tsx"
+  "include": [
+    "./src/**/**/*"
   ]
 }
