--- a/Shop.Web/package.json
+++ b/Shop.Web/package.json
@@ -12,17 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "browserify": "^16.5.0",
     "express": "^4.17.1",
     "google-protobuf": "^3.11.4",
     "grpc-web": "^1.0.7",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "reactstrap": "^8.4.1",
+    "style-loader": "^1.1.3",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
