--- a/Shop.Web/package.json
+++ b/Shop.Web/package.json
@@ -19,6 +19,7 @@
     "grpc-web": "^1.0.7",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "reactstrap": "^8.4.1",
     "style-loader": "^1.1.3",
     "typescript": "^3.8.3"
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
