--- a/Shop.Web/package.json
+++ b/Shop.Web/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
+    "react-toastify": "^5.5.0",
     "reactstrap": "^8.4.1",
     "style-loader": "^1.1.3",
     "typescript": "^3.8.3"
