--- a/Shop.Web/package.json
+++ b/Shop.Web/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/reactstrap": "^8.4.2",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
