--- a/Shop.Service/Shop.Service.csproj
+++ b/Shop.Service/Shop.Service.csproj
@@ -5,17 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Protos\user.proto" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Protobuf Include="Protos\user.proto" GrpcServices="Server" />
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+    <None Remove="Protos\service.proto" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.24.0" />
     <PackageReference Include="Grpc.AspNetCore.Web" Version="2.28.0-pre2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\service.proto" GrpcServices="Server" />
   </ItemGroup>
 
 </Project>
