user panel, hash front and back password

--- a/Shop.Service/Shop.Service.csproj
+++ b/Shop.Service/Shop.Service.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.27.0" />
     <PackageReference Include="Grpc.AspNetCore.Web" Version="2.28.0-pre2" />
     <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
