--- a/Shop.Service/appsettings.json
+++ b/Shop.Service/appsettings.json
@@ -11,5 +11,8 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
-  }
+  },
+  "AppSettings": {
+    "Token": "SekretnyTokenSekretnyTokenSekretnyTokenSekretnyToken"
+  },
 }
