--- a/Shop.Web/tsconfig.JSON
+++ b/Shop.Web/tsconfig.JSON
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "jsx": "react",
+    "lib": ["dom", "esnext"],
+    "esModuleInterop": true,
     "module": "commonjs",
     "noImplicitAny": true,
     "outDir": "./build/",
@@ -12,5 +14,6 @@
   },
   "include": [
     "./src/**/**/*"
-  ]
+  ],
+  "exclude": ["node_modules"]
 }
