--- a/Shop.Web/package.json
+++ b/Shop.Web/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react-transition-group": "^4.2.4",
     "bootstrap": "^4.4.1",
     "browserify": "^16.5.0",
     "crypto": "^1.0.1",
